overflow fix relative

--- a/SCSS/_components.scss
+++ b/SCSS/_components.scss
@@ -1,4 +1,5 @@
 html, body{
+    position:relative;
   overflow-y: hidden;
   overflow-x: hidden;
 }
